--- a/src/app/usager/usager.component.html
+++ b/src/app/usager/usager.component.html
@@ -64,6 +64,13 @@
         </tbody>
     </table>
 
+
+    <div>
+        <a style="margin-top: 15px" class="btn btn-link"
+            [routerLink]="['/create-prestation',usager.username ]">Créer une prestation pour ce client</a>
+    </div>
+    
+
     <div>
         <a style="margin-top: 15px" class="btn btn-link"
             [routerLink]="['/usagers']">Retour à la liste des clients</a>
