--- a/src/app/create-prestation/create-prestation.component.html
+++ b/src/app/create-prestation/create-prestation.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <h2>Créer une prestation pour usager : {{identifiantUsager}}</h2>
+        <h2>Créer une prestation pour usager : {{this.newPrestation.identifiantUsager}}</h2>
     </div>
 
 
