--- a/src/app/update-prestation/update-prestation.component.html
+++ b/src/app/update-prestation/update-prestation.component.html
@@ -68,7 +68,7 @@
        
     </form>
     <div>
-        <a style="margin-top: 15px"   class="btn btn-link"  [routerLink]="['/usagers',currentPrestation.identifiantUsager]">Retour à la liste des prestations du client</a>
+        <a style="margin-top: 15px"   class="btn btn-link"  [routerLink]="['/usager',currentPrestation.identifiantUsager]">Retour à la liste des prestations du client</a>
     </div>
    
 </div>
