--- a/src/app/update-prestation/update-prestation.component.html
+++ b/src/app/update-prestation/update-prestation.component.html
@@ -39,7 +39,7 @@
 
         <div *ngIf="authService.isEmploye()" class="col-sm-4 col-md-4 col-lg-4">
             <h5>Statut</h5>
-            <select class="form-control form-control-lg" id="status" name="status" [(ngModel)]="updatedStatus">
+            <select class="form-control form-control-lg" id="status" name="status" [(ngModel)]="currentPrestation.status">
                 <option *ngFor="let status of allStatus" [value]="status">
                     {{status}}
                 </option>
