--- a/src/app/usagers/usagers.component.html
+++ b/src/app/usagers/usagers.component.html
@@ -42,6 +42,11 @@
             <h3 class="text-danger">{{ resultat }}</h3>
         </div>
 
+        
+        <div class="alert alert-info">
+            <strong> Sélectionnez un client pour lui créer une prestation</strong>
+        </div>
+
 
         <table class="table table-striped">
             <thead>
