--- a/src/app/usager/usager.component.html
+++ b/src/app/usager/usager.component.html
@@ -81,6 +81,10 @@
             [routerLink]="['/usagers']">Retour à la liste des clients</a>
     </div>
 
+    <div *ngIf="authService.isEmploye()">
+        <a style="margin-top: 15px"   class="btn btn-link"  [routerLink]="['/prestations']">Retour à la liste de toutes les prestations </a>
+    </div>
+
     <div>
         <a  *ngIf="authService.isUsager()" style="margin-top: 15px" class="btn btn-link"
         routerLink="/modeles">Retour à l'acceuil</a>
