--- a/src/app/usagers/usagers.component.html
+++ b/src/app/usagers/usagers.component.html
@@ -43,7 +43,7 @@
         </div>
 
         
-        <div class="alert alert-info">
+        <div class="alert alert-warning">
             <strong> Sélectionnez un client pour lui créer une prestation</strong>
         </div>
 
