--- a/src/app/create-prestation/create-prestation.component.html
+++ b/src/app/create-prestation/create-prestation.component.html
@@ -70,4 +70,9 @@
 
 
     </form>
+
+    <div>
+        <a style="margin-top: 15px"   class="btn btn-link"  [routerLink]="['/usager',this.newPrestation.identifiantUsager]">Retour à la liste des prestations de {{this.newPrestation.identifiantUsager}}</a>
+    </div>
+
 </div>
