correction affichage prestations

--- a/src/app/prestations/prestations.component.html
+++ b/src/app/prestations/prestations.component.html
@@ -93,6 +93,7 @@
 
                     <td>{{prestation.dateCreation| date : "dd/MM/yyyy" }}</td>
                     <td>{{prestation.id}}</td>
+                    <td>{{prestation.identifiantUsager}}</td>
                     <td>{{prestation.nomMarque}}</td>
                     <td>{{prestation.nomModele}}</td>
                     <td>{{prestation.numeroSerie}}</td>
