--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
           <a *ngIf="authService.isEmploye()" class="dropdown-item" routerLink="/add-user">Créer un client</a>
           <a *ngIf="authService.isEmploye()" class="dropdown-item" routerLink="/usagers">Liste des clients / créer prestation</a>
           <a *ngIf="authService.isAdmin()" class="dropdown-item" routerLink="/add-user">Créer un employé</a>
-          <a *ngIf="authService.isAdmin()" class="dropdown-item" routerLink="/add-user">Liste des employés</a>
+          <a *ngIf="authService.isAdmin()" class="dropdown-item" routerLink="/employes">Liste des employés</a>
       
         </div>
        
