--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,72 +3,124 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Phonestore</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm" style="background-color: black; " >
     <!-- Brand -->
-    <a class="navbar-brand" href="#">Phonestore</a>
+    <a class="navbar-brand" style="color : red" href="#">Phonetastik</a>
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/modeles">Home</a>
+        <a class="nav-link" routerLink="/homepage" style="color : white">Home</a>
       </li>
       <!-- Dropdown -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" style="color : white">
           Modèles
         </a>
         <div class="dropdown-menu">
           <a *ngIf="authService.isEmploye()" class="dropdown-item" routerLink="/add-modele">Créer un modèle</a>
-          <a class="dropdown-item" href="#">Liste des modèles / réparations</a>
+          <a class="dropdown-item"  routerLink="/modeles">Liste des modèles / réparations</a>
         </div>
       </li>
 
-       <!-- Dropdown -->
-       <li  *ngIf="authService.isFromTeam()" class="nav-item dropdown">
-        <a  class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+      <!-- Dropdown -->
+      <li *ngIf="authService.isFromTeam()" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" style="color : white">
           Administration
         </a>
-        <div  class="dropdown-menu">
-        
+        <div class="dropdown-menu">
+
           <a *ngIf="authService.isEmploye()" class="dropdown-item" routerLink="/add-user">Créer un client</a>
-          <a *ngIf="authService.isEmploye()" class="dropdown-item" routerLink="/usagers">Liste des clients / créer prestation</a>
+          <a *ngIf="authService.isEmploye()" class="dropdown-item" routerLink="/usagers">Liste des clients / créer
+            prestation</a>
           <a *ngIf="authService.isAdmin()" class="dropdown-item" routerLink="/add-user">Créer un employé</a>
           <a *ngIf="authService.isAdmin()" class="dropdown-item" routerLink="/employes">Liste des employés</a>
-      
+
         </div>
-       
+
       </li>
 
-      
-       <!-- Dropdown -->
-       <li *ngIf="authService.isUsager() || authService.isEmploye()" class="dropdown-item" class="nav-item dropdown">
-        <a  class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+
+      <!-- Dropdown -->
+      <li *ngIf="authService.isUsager() || authService.isEmploye()" class="dropdown-item" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" style="color : white">
           Prestations
         </a>
-        <div  class="dropdown-menu">
-          
-          
-          <a    *ngIf="authService.isEmploye()"  [routerLink]="['/prestations']">Liste des prestations</a>
-          <a    *ngIf="authService.isUsager()"  [routerLink]="['/usager',authService.loggedUser]">Mes prestations</a>
-      
+        <div class="dropdown-menu">
+
+
+          <a *ngIf="authService.isEmploye()" [routerLink]="['/prestations']">Liste des prestations</a>
+          <a *ngIf="authService.isUsager()" [routerLink]="['/usager',authService.loggedUser]">Mes prestations</a>
+
         </div>
-       
+
       </li>
+
+      <!-- Dropdown -->
+      <li class="dropdown-item" class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" style="color : white">
+          Contact
+        </a>
+        <div class="dropdown-menu">
+
+
+          <a href="https://www.facebook.com/Phonetastik">
+            <i class="fa fa-facebook" style="font-size:24px"> facebook</i></a>
+          <a href="https://www.instagram.com/phonetastik62500/">
+            <i class="fa fa-instagram" style="font-size:24px"> instagram</i></a>
+          <a
+            href="https://www.snapchat.com/add/phonetastik?share_id=OEJFNDdDREQtMzNFRi00QzAwLTlCOTUtNzA5NDQ5MjZGRjk4&locale=fr_FR&sid=c6f34ebeeb8447439bcceaddc1c049c9">
+            <i class="fa fa-snapchat" style="font-size:24px"> snapchat</i>
+          </a>
+          <a href="https://www.google.com/search?q=phonetastik%20saint-omer">
+            <i class="fa fa-google" style="font-size:24px"> google</i>
+          </a>
+          
+
+        </div>
+
+      </li>
+
+        <!-- Dropdown -->
+        <li class="dropdown-item nav-item dropdown">
+					<a href="mailto:contact@phonetastik.fr?subject=Question client" style="color : white">
+						<i class="fa fa-envelope" style="font-size:24px"></i>
+						<span>contact@phonetastik.fr</span>
+					</a>
+				</li>
+
+         <!-- Dropdown -->
+         <li class="dropdown-item nav-item dropdown">
+					<a href="tel:+33767226264" style="color : white">
+            <i class="fa fa-phone" style="font-size:24px"> 0767226264</i>
+
+          </a>
+				</li>
+
 
 
     </ul>
-    <ul class="navbar-nav ml-auto">
+
+
+    <ul class="navbar-nav ml-auto" >
       <li> <a class="nav-link">{{authService.loggedUser}}</a></li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+      <li class="nav-item dropdown" >
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown" >
           Connexion
         </a>
         <div class="dropdown-menu">
-          <a *ngIf="!authService.isloggedIn" class="dropdown-item" routerLink="login">login</a>
-          <a *ngIf="authService.isloggedIn" class="dropdown-item"  (click) = "onLogout()" >logout</a>
+          <a *ngIf="!authService.isloggedIn" class="dropdown-item" routerLink="login" >login</a>
+          <a *ngIf="authService.isloggedIn" class="dropdown-item" (click)="onLogout()">logout</a>
         </div>
       </li>
     </ul>
