modification du port dans les appel

--- a/src/app/associations-modele/associations-modele.component.html
+++ b/src/app/associations-modele/associations-modele.component.html
@@ -120,7 +120,7 @@
                     [routerLink]="['/updateModele',currentModele.id]">Retour à la fiche du modèle</a>
             </div>
             <div>
-                <a style="margin-top: 15px" class="btn btn-link" href="#">Retour à la liste des modèles</a>
+                <a style="margin-top: 15px" class="btn btn-link" [routerLink]="['/modeles']">Retour à la liste des modèles</a>
             </div>
         </div>
     </div>
