--- a/src/app/update-modele/update-modele.component.html
+++ b/src/app/update-modele/update-modele.component.html
@@ -90,6 +90,6 @@
         <a style="margin-top: 15px"   class="btn btn-link"  [routerLink]="['/associations-modele',currentModele.id]">Liste des réparations sur ce modèle</a>
     </div>
     <div>
-        <a style="margin-top: 15px"   class="btn btn-link" href="#">Retour à la liste des modèles</a>
+        <a style="margin-top: 15px"   class="btn btn-link" [routerLink]="['/modeles']">Retour à la liste des modèles</a>
     </div>
 </div>
