--- a/src/app/usager/usager.component.html
+++ b/src/app/usager/usager.component.html
@@ -87,7 +87,7 @@
 
     <div>
         <a  *ngIf="authService.isUsager()" style="margin-top: 15px" class="btn btn-link"
-        routerLink="/modeles">Retour à l'acceuil</a>
+        href="#">Retour à l'acceuil</a>
     </div>
     
     
