modif des url image

--- a/src/app/modeles/modeles.component.html
+++ b/src/app/modeles/modeles.component.html
@@ -220,7 +220,10 @@
                         <td>{{modele.capaciteStockage}}</td>
                         <td>
 
-                            <img class="card-img-top img-responsive" src="{{ apiUrlImage + '/loadImage/' + modele.id }}"
+                            <!--<img class="card-img-top img-responsive" src="{{ apiUrlImage + '/loadImage/' + modele.id }}"
+                                style="height: 140px; width:140px" />-->
+
+                                <img class="card-img-top img-responsive" src="{{ prefixImage +  modele.imagePath }}"
                                 style="height: 140px; width:140px" />
                         </td>
 
